<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VistasUsuarios.PerfilUsuarioFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal">

            <ImageView
                android:id="@+id/IVSiestaLuna"
                android:layout_width="189dp"
                android:layout_height="61dp"
                android:layout_marginTop="40dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/siestaluna" />

            <ImageView
                android:id="@+id/btnCerrarSesion"
                android:layout_width="170dp"
                android:layout_height="50dp"
                android:layout_marginTop="40dp"
                android:layout_gravity="right"
                app:srcCompat="@drawable/btncerrarsesion"/>

            <TextView
                android:id="@+id/nombreUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="center_horizontal"
                android:text=""
                android:textSize="24sp"
                android:textColor="#616161"/>

            <TextView
                android:id="@+id/tvCorreo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/txtCorreo"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/correoUsuario"
                android:layout_width="2in"
                android:layout_height="50sp"
                android:layout_marginTop="4dp"
                android:background="@drawable/estilos_bordes"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:textSize="20sp"
                android:textColor="#616161"/>

            <TextView
                android:id="@+id/tvTelefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/telefono"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/telefonoUsuario"
                android:layout_width="2in"
                android:layout_height="50dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/estilos_bordes"
                android:ems="10"
                android:inputType="number"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tvNacionalidad"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/nacionalidad"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/nacionalidadUsuario"
                android:layout_width="2in"
                android:layout_height="50dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/estilos_bordes"
                android:ems="10"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <TextView
                android:id="@+id/tvfechaNac"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/fechaNac"
                android:textSize="20sp"
                android:textColor="@color/black"/>

            <EditText
                android:id="@+id/fechaNac"
                android:layout_width="2in"
                android:layout_height="50dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/estilos_bordes"
                android:ems="10"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:focusableInTouchMode="false"
                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">

                <Button
                    android:id="@+id/btnGuardar"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:backgroundTint="#00D2C4"
                    android:text="@string/guardar"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    app:strokeColor="#94000000" />

                <Button
                    android:id="@+id/btnCancelar"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_marginLeft="20dp"
                    android:backgroundTint="#FF0000"
                    android:text="@string/cancelar"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    app:strokeColor="#94000000" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>