<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GestionCuentas.activity_recuperarContra">
    <ImageView
        android:id="@+id/IVSiestaLuna"
        android:layout_width="189dp"
        android:layout_height="61dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/siestaluna" />

    <TextView
        android:id="@+id/tvrecuperarContra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/recuperarContraseña"
        android:textColor="#000000"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IVSiestaLuna" />
    <TextView
        android:id="@+id/tvCorreo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/txtCorreo"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.131"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvrecuperarContra" />
    <EditText
        android:id="@+id/etCorreo"
        android:layout_width="2in"
        android:layout_height="50sp"
        android:layout_marginTop="4dp"
        android:background="@drawable/estilos_bordes"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCorreo" />
    <Button
        android:id="@+id/btnEnviarContra"
        android:layout_width="wrap_content"
        android:layout_height="35pt"
        android:layout_marginTop="24dp"
        android:backgroundTint="#00D2C4"
        android:text="@string/enviarCodigo"
        android:textColor="#FFFFFF"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etCorreo"
        style="?attr/materialButtonOutlinedStyle"
        app:strokeColor="#94000000"/>

    <ImageView
        android:id="@+id/atras"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toStartOf="@+id/IVSiestaLuna"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/atras" />
</androidx.constraintlayout.widget.ConstraintLayout>